--- a/index.html
+++ b/index.html
@@ -7,16 +7,39 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="quiz-container">
+    <div id="start-screen">
+      <h2>Select a Topic</h2>
+      <select id="topic-select">
+        <option value="">-- Choose a Topic --</option>
+      </select>
+      <button id="start-btn">Start Quiz</button>
+    </div>
+
+    <div id="quiz-container" style="display: none">
       <h1 class="quiz-title">Tech Whiz Quiz</h1>
-      <h2 class="quiz-subtitle">Web Development</h2>
-      <p class="question-info" id="question-number">Question 1 of 50</p>
-      <p class="score" id="score">Score: 0</p>
-      <div class="question-box">
-        <p class="question-text" id="question-text">ExampleQuestion</p>
-        <div class="options" id="options-container"></div>
-        <button id="next-btn" class="next-btn" disabled>Next Question</button>
+      <h2 class="quiz-subtitle">HTML & CSS Basics</h2>
+      <h3 id="question-number">Question 1 of 6</h3>
+      <p class="question-text" id="question-text">Loading question...</p>
+      <div class="options" id="options-container"></div>
+
+      <p id="timer">Time Left: 15s</p>
+      <div
+        id="progress-container"
+        style="width: 100%; height: 10px; background: #eee; border-radius: 5px"
+      >
+        <div
+          id="progress-bar"
+          style="
+            width: 0%;
+            height: 10px;
+            background: #4caf50;
+            border-radius: 5px;
+          "
+        ></div>
       </div>
+
+      <p class="score" id="score">Score: 0</p>
+      <button id="next-btn" class="next-btn" disabled>Next Question</button>
     </div>
 
     <script src="script.js" defer></script>
