Removed dropdown list from start page

--- a/index.html
+++ b/index.html
@@ -8,34 +8,31 @@
   </head>
   <body>
     <div id="start-screen">
-      <h2>Select a Topic</h2>
-      <select id="topic-select">
-        <option value="">-- Choose a Topic --</option>
-      </select>
+      <h2>Pick Categories</h2>
+      <div class="categories-container">
+        <div class="category-card" data-topic="Computer Fundamentals">
+          Computer Fundamentals
+        </div>
+        <div class="category-card" data-topic="Programming Concepts">
+          Programming Concepts
+        </div>
+        <div class="category-card" data-topic="Web Development">
+          Web Development
+        </div>
+      </div>
       <button id="start-btn">Start Quiz</button>
     </div>
 
     <div id="quiz-container" style="display: none">
       <h1 class="quiz-title">Tech Whiz Quiz</h1>
-      <h2 class="quiz-subtitle">HTML & CSS Basics</h2>
+      <h2 class="quiz-subtitle" id="quiz-topic">HTML & CSS Basics</h2>
       <h3 id="question-number">Question 1 of 6</h3>
       <p class="question-text" id="question-text">Loading question...</p>
       <div class="options" id="options-container"></div>
 
       <p id="timer">Time Left: 15s</p>
-      <div
-        id="progress-container"
-        style="width: 100%; height: 10px; background: #eee; border-radius: 5px"
-      >
-        <div
-          id="progress-bar"
-          style="
-            width: 0%;
-            height: 10px;
-            background: #4caf50;
-            border-radius: 5px;
-          "
-        ></div>
+      <div class="progress-container">
+        <div class="progress-bar"></div>
       </div>
 
       <p class="score" id="score">Score: 0</p>
