requested changes updates

--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Take Quiz</button>
                 </form>
-                <p class="alternate-action">Don't have an account? <a href="landing.html">Back to Categories</a></p>
+                <p class="alternate-action"><a href="index.html">Back to Home</a></p>
             </section>
         </main>
 
