added responsive ui, index entry point updated login screen

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container1">
+    <div class="container">
         <header>
             <h1>Welcome to Tech Whiz Quiz</h1>
         </header>
         <main>
             <section>
                 <img src="asset/Image.jpg" alt="image" class="welcome-image">
-                <h2>Test Your Knowledge</h2>
-                <a href="login.html" class="btn">Login</a>
+                <h2>Login To Test Your Knowledge</h2>
+                <a href="login.html" class="btn-login">Login</a>
             </section>
         </main>
         <footer>
-            <p>&copy; 2024 Tech Quiz App</p>
+            <p class="text">&copy; 2024 Tech Quiz App</p>
         </footer>
     </div>
 </body>
