--- a/landing.html
+++ b/landing.html
@@ -28,13 +28,10 @@
         </main>
 
         <footer>
-                <p><a href="index.html">Back to Home</a></p>
+                <p><a href="index.html" class="back">Back to Home</a></p>
             <p>&copy; 2024 Tech Quiz App</p>
         </footer>
     </div>
-
-    <script src="data.js"></script>
-    <script src="landing.js"></script>
 </body>
 
 </html>
