--- a/login.html
+++ b/login.html
@@ -16,20 +16,19 @@
 
         <main id="login-page-container">
             <section id="login-view" class="view active">
-                <h2>Login to Continue</h2>
-                <form action="quiz.html" method="get">
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Username: </label>
-                        <input type="email" class="form-control" id="username" aria-describedby="emailHelp"
-                            placeholder="Enter email">
+                 <h2>Login to Continue</h2>
+                <div class="login-flex-row">
+                    <div class="login-logo-col">
+                        <img src="asset/Image.jpg" alt="Tech Whiz Quiz Logo" class="logo">
+                            <p class="logo-caption">Empowering Your Knowledge Journey.</p>
+
                     </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password:</label>
-                        <input type="password" class="form-control" id="password" placeholder="Password">
+                    <div class="login-btns-col">
+                        <a href="landing.html" class="btn-user">User Login</a>
+                        <a href="quiz.html" class="btn-admin">Admin Login</a>
                     </div>
-                    <button type="submit" class="btn btn-primary">Take Quiz</button>
-                </form>
-                <p class="alternate-action"><a href="index.html">Back to Home</a></p>
+                </div>
+                <p class="alternate-action"><a href="index.html" class="back">Back to Home</a></p>
             </section>
         </main>
 
