--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome - Tech Quiz App</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Login - Tech Quiz App</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-    <div class="container">
-        <header>
-            <h1>Welcome to Tech Whiz Quiz</h1>
-        </header>
-        <main>
-            <section>
-                <img src="asset/Image.jpg" alt="image" class="welcome-image">
-                <h2>Login To Test Your Knowledge</h2>
-                <a href="login.html" class="btn-login">Login</a>
-            </section>
+<main id="login-page-container">
+    <section class="login-flex-row">
+        <img src="asset/95b23eacbc0e8d0bd958cb0c3616e733.jpg" alt="Tech Whiz Quiz Logo" class="logo">
+    </section>
+    <section class="login-btns-col">
+        <h1>Tech Whiz Quiz</h1>
+        <h2>Login to Continue</h2>
+        <a href="quiz.html" class="btn-user">User Login</a>
+        <a href="admin.html" class="btn-admin">Admin Login</a>
+    </section>
         </main>
-        <footer>
-            <p class="text">&copy; 2024 Tech Quiz App</p>
-        </footer>
-    </div>
+    <script src="login.js"></script>
 </body>
+
 </html>
