added responsiveness for the image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <main id="login-page-container">
     <section class="login-flex-row">
-        <img src="asset/Image.jpg" alt="Tech Whiz Quiz Logo" class="logo">
+        <img src="asset/Image.jpg" alt="Tech Whiz Quiz Logo" class="logo-main">
     </section>
     <section class="login-btns-col">
         <h1>Tech Whiz Quiz</h1>
