--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Quiz - Select Category</title>
     <!-- <link rel="stylesheet" href="landing.css"> --> <!-- Assuming your CSS is in landing.css -->
-    <link rel="stylesheet" href="src/asset/stylesheets/quiz.css">
+    <link rel="stylesheet" href="src/asset/stylesheets/index.css">
 </head>
 
 <body>
@@ -54,6 +54,8 @@
         <p>© 2024 Tech Quiz App</p>
     </footer>
 
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <!-- <script>
         // JavaScript for hamburger menu functionality
         const hamburgerMenu = document.querySelector('.hamburger-menu');
