--- a/quiz.html
+++ b/quiz.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Quiz - In Progress</title>
-    <link rel="stylesheet" href="src/asset/stylesheets/quiz.css"> <!-- Adjust path as needed -->
-    <!-- You might want a more specific CSS for the quiz page itself -->
+    <link rel="stylesheet" href="src/asset/stylesheets/index.css">
+    <link rel="stylesheet" href="src/asset/stylesheets/quiz.css">
 </head>
 
 <body>
@@ -15,16 +15,17 @@
             <div class="nav-logo">
                 <a href="index.html">Logo</a> <!-- Placeholder for logo -->
             </div>
-            <!-- Hamburger menu can be included if you want consistent navigation -->
+    
             <button class="hamburger-menu" aria-label="Toggle navigation menu" aria-expanded="false">
                 <span class="line"></span>
                 <span class="line"></span>
                 <span class="line"></span>
             </button>
+    
             <div class="nav-menu">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="quiz.html">Quiz</a></li>
+                    <li><a href="quiz.html" class="active">Quiz</a></li>
                     <li><a href="topscores.html">Top Score</a></li>
                 </ul>
                 <div class="nav-admin">
