--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <div class="nav-menu">
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="quiz.html">Quiz</a></li>
                     <li><a href="topscores.html">Top Score</a></li>
                 </ul>
