Adding the Name page as the first screen

--- a/index.html
+++ b/index.html
@@ -3,94 +3,91 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech Whiz Quiz</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>Tech Quiz - Enter Your Name</title>
+    <link rel="stylesheet" href="src/asset/stylesheets/index.css" />
   </head>
+
   <body>
-    <div id="start-screen">
-      <h2>Pick Categories</h2>
-      <div class="categories-container">
-        <div class="category-card" data-topic="Computer Fundamentals">
-          Computer Fundamentals
+    <header>
+      <nav class="navbar">
+        <div class="nav-logo">
+          <a href="index.html">Logo</a>
+          <!-- Placeholder for logo -->
         </div>
-        <div class="category-card" data-topic="Programming Concepts">
-          Programming Concepts
+
+        <button
+          class="hamburger-menu"
+          aria-label="Toggle navigation menu"
+          aria-expanded="false"
+        >
+          <span class="line"></span>
+          <span class="line"></span>
+          <span class="line"></span>
+        </button>
+
+        <div class="nav-menu">
+          <ul class="nav-links">
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="quiz.html">Quiz</a></li>
+            <li><a href="topscores.html">Top Score</a></li>
+          </ul>
+          <div class="nav-admin">
+            <a href="admin.html" class="btn-admin-nav">Admin</a>
+          </div>
         </div>
-        <div class="category-card" data-topic="Web Development">
-          Web Development
+      </nav>
+    </header>
+
+    <main id="landing-page">
+      <!--Name Page-->
+      <section id="name-screen" class="view active">
+        <h1>Tech Whiz Quiz</h1>
+        <h2>Enter Your Name to Begin</h2>
+        <div class="name-input-container">
+          <input
+            type="text"
+            id="player-name"
+            placeholder="Your name..."
+            aria-label="Enter your name"
+          />
+          <button id="name-submit" class="btn-primary">Continue</button>
         </div>
-      </div>
-      <button id="start-btn">Start Quiz</button>
-    </div>
+      </section>
 
-    <div id="quiz-container" style="display: none">
-      <h1 class="quiz-title">Tech Whiz Quiz</h1>
-      <h2 class="quiz-subtitle" id="quiz-topic">HTML & CSS Basics</h2>
-      <h3 id="question-number">Question 1 of 6</h3>
-      <p class="question-text" id="question-text">Loading question...</p>
-      <div class="options" id="options-container"></div>
-
-      <p id="timer">Time Left: 15s</p>
-      <div class="progress-container">
-        <div class="progress-bar"></div>
-      </div>
-
-      <p class="score" id="score">Score: 0</p>
-      <button id="next-btn" class="next-btn" disabled>Next Question</button>
-    </div>
-
-    <script src="script.js" defer></script>
-  </body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech Whiz Quiz</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <div id="start-screen">
-      <h2>Pick Categories</h2>
-      <div class="categories-container">
-        <div class="category-card" data-topic="Computer Fundamentals">
-          Computer Fundamentals
+      <!-- Category Selection Screen (hidden initially) -->
+      <section id="category-selection-view" class="view">
+        <h1>Tech Whiz Quiz</h1>
+        <h2>Welcome, <span id="display-name"></span>!</h2>
+        <h3>Choose a Category to Start</h3>
+        <div>
+          <ul id="category-list">
+            <li>
+              <button class="category-btn" data-category="javascript">
+                Web Development
+              </button>
+            </li>
+            <li>
+              <button class="category-btn" data-category="html-css">
+                Computer Fundamentals
+              </button>
+            </li>
+            <li>
+              <button class="category-btn" data-category="git">
+                Programming Concepts
+              </button>
+            </li>
+          </ul>
         </div>
-        <div class="category-card" data-topic="Programming Concepts">
-          Programming Concepts
-        </div>
-        <div class="category-card" data-topic="Web Development">
-          Web Development
-        </div>
-      </div>
-      <button id="start-btn">Start Quiz</button>
-    </div>
+      </section>
+    </main>
 
-    <div id="quiz-container" style="display: none">
-      <h1 class="quiz-title">Tech Whiz Quiz</h1>
-      <h2 class="quiz-subtitle" id="quiz-topic">HTML & CSS Basics</h2>
-      <h3 id="question-number">Question 1 of 6</h3>
-      <p class="question-text" id="question-text">Loading question...</p>
-      <div class="options" id="options-container"></div>
+    <footer>
+      <p><a href="index.html" class="back">Back to Home</a></p>
+      <p>© 2024 Tech Quiz App</p>
+    </footer>
 
-      <p id="timer">Time Left: 15s</p>
-      <div class="progress-container">
-        <div class="progress-bar"></div>
-      </div>
-
-      <p class="score" id="score">Score: 0</p>
-      <button id="next-btn" class="next-btn" disabled>Next Question</button>
-    </div>
-
-    <div id="scoreboard" style="display: none">
-      <h2>Quiz Complete!</h2>
-      <p id="final-score" class="final-score">Congratulations!!!</p>
-
-      <h3>Scoreboard</h3>
-      <div id="scoreboard-entries"></div>
-    </div>
-
-    <script src="script.js" defer></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script type="module" src="src/quiz/main.js"></script>
   </body>
 </html>
