Updated code to allow user to input name and save name with score

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
                 </ul>
             </div>
         </section>
+        <!-- Name Input View -->
+        <section id="name-input-view" class="view" style="display: none;">
+            <h2>Enter Your Name</h2>
+            <input type="text" class="name-input" id="usernameInput" placeholder="Your name">
+            <button id="startQuizBtn">Start Quiz</button>
+        </section>
+
     </main>
 
     <footer>
