Update style for admin

--- a/admin.html
+++ b/admin.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin</title>
-  <link href="/src/asset/stylesheets/index.css" rel="stylesheet">
-  <link href="/src/asset/stylesheets/admin.css" rel="stylesheet">
+  <link rel="stylesheet" href="src/asset/stylesheets/index.css">
+  <link rel="stylesheet" href="src/asset/stylesheets/admin.css">
 </head>
 
 <body>
